[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/GenrenciarUser.gd" type="Script" id=1]
[ext_resource path="res://Fontes/MANDATOR.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="GenrenciarUser" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="add_time" type="CanvasLayer" parent="."]
layer = 2

[node name="ColorRect" type="ColorRect" parent="add_time"]
modulate = Color( 0.564706, 0.835294, 0.929412, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -662.0
margin_top = -356.0
margin_right = 714.0
margin_bottom = 409.0

[node name="info" type="Label" parent="add_time"]
margin_left = 526.0
margin_top = 185.0
margin_right = 1450.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 1 )
text = "adicionar tempo no seguinte formato 00:00"

[node name="LineEdit" type="LineEdit" parent="add_time"]
margin_left = 382.0
margin_top = 368.0
margin_right = 882.0
margin_bottom = 457.0
max_length = 5

[node name="add" type="Button" parent="add_time"]
margin_left = 1508.0
margin_top = 847.0
margin_right = 1632.0
margin_bottom = 905.0

[node name="OptionButton" type="OptionButton" parent="add_time"]
margin_left = 383.0
margin_top = 512.0
margin_right = 893.0
margin_bottom = 608.0

[node name="aviso" type="Label" parent="add_time"]
margin_left = 1306.0
margin_top = 270.0
margin_right = 1581.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 2 )
autowrap = true

[node name="back_main" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="back_main"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.913725, 0.992157, 0.937255, 1 )

[node name="nome" type="Label" parent="back_main"]
margin_left = 552.0
margin_top = 4.0
margin_right = 1261.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 3 )
text = "usuario"

[node name="config_pills" type="Button" parent="back_main"]
margin_left = 118.0
margin_top = 184.0
margin_right = 450.0
margin_bottom = 292.0
text = "configurar"

[node name="config_gaveta" type="Button" parent="back_main"]
margin_left = 124.0
margin_top = 333.0
margin_right = 457.0
margin_bottom = 445.0
text = "gavetas"

[node name="wind_gaveta" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect2" type="ColorRect" parent="wind_gaveta"]
modulate = Color( 0.564706, 0.835294, 0.929412, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -662.0
margin_top = -356.0
margin_right = 714.0
margin_bottom = 409.0

[node name="info2" type="Label" parent="wind_gaveta"]
margin_left = 786.0
margin_top = 185.0
margin_right = 1152.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 1 )
text = "adicionar gaveta "

[node name="gaveta" type="LineEdit" parent="wind_gaveta"]
margin_left = 684.0
margin_top = 396.0
margin_right = 1192.0
margin_bottom = 496.0

[node name="add_gaveta" type="Button" parent="wind_gaveta"]
margin_left = 1454.0
margin_top = 788.0
margin_right = 1616.0
margin_bottom = 912.0
text = "adicionar"

[connection signal="pressed" from="add_time/add" to="." method="_on_add_pressed"]
[connection signal="pressed" from="back_main/config_pills" to="." method="_on_config_pills_pressed"]
[connection signal="pressed" from="back_main/config_gaveta" to="." method="_on_config_gaveta_pressed"]
[connection signal="pressed" from="wind_gaveta/add_gaveta" to="." method="_on_add_gaveta_pressed"]
